[package]
name = "cellkit-actions-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
ckb-jsonrpc-types = "0.202.0"
ckb-sdk = { version = "4.4.0", default-features = false }
ckb-types = "0.202.0"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
vercel_runtime = { version = "2", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "axum"
path = "api/axum.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
